lib friendly