@@ -20,10 +20,10 @@ public class AppTest implements TestAware {
     @Test
     public void testInputTransform() throws IOException {
         String result = new CurlXml().call(
-                null,
-                "name\nSpain\nFrance",
-                List.of("classpath:/soap-server/name-list-2-request.xsl"),
-                Collections.emptyList(), true);
+            null,
+            "name\nSpain\nFrance",
+            List.of("classpath:/soap-server/name-list-2-request.xsl"),
+            Collections.emptyList(), true);
         assertXmlMatches("/soap-server/request-ns-stripped.xml", result);
     }
 }
